open graph design

--- a/app/global.css
+++ b/app/global.css
@@ -91,6 +91,11 @@ html {
   @apply my-4 text-neutral-800;
 }
 
+.prose blockquote {
+  @apply border-l-4 border-neutral-300 pl-4 my-4 text-neutral-600;
+}
+
+
 .prose hr {
   @apply border-neutral-200 my-6;
   border-top-width: 1px;
